--- a/tarea1/Unitalla.html
+++ b/tarea1/Unitalla.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- saved from url=(0049)http://cursos.ectotec.com/javascript/onesize.html -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<title>Unitalla</title>
 		
 		<style type="text/css">
@@ -9,6 +11,7 @@
 				font-size: 12px;
 			}
 		</style>
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 	</head>
 	<body>
 		<h1>Unitalla</h1>
