--- a/2/index.html
+++ b/2/index.html
@@ -10,12 +10,33 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-sanitize.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-animate.min.js"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
-    
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <script src="libs/controller.js"></script>
 </head>
 <body ng-controller="controlador">
+    <!--inico-->
+    <div>
+<!--agregar usuario-->
+<div class="pos-f-t">
+        <div class="collapse" id="navbarToggleExternalContent">
+          <div class="bg-dark p-4">
+            <h5 class="text-white h4">Collapsed content</h5>
+            <span class="text-muted">Toggleable via the navbar brand.</span>
+          </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </nav>
+      </div>
+<!--ver lista-->
+<div>
+
+</div>
+    </div>
     <div class="container">
-        <form>
+        <form >
             <div class="input-group col-md-6">
                 <div class="input-group-prepend">
                     <span class="input-group-text " id="">Nombre</span>
@@ -30,8 +51,8 @@
             </div>
             <div class="col-md-6">
                 <label>Genero:</label>
-                <input type="radio" id="Masculino" name="genero" />
-                <input type="radio" id="fem" name="genero" />
+                <input type="radio" name="genero" ng-model="nuevo.genero" value="Masculino"/>
+                <input type="radio" name="genero" ng-model="nuevo.genero" value="Femenino"/>
             </div>
 
             <div class="col-md-6">
@@ -46,7 +67,11 @@
                     <button type="button" ng-click="guardar()" class="btn btn-primary">Guardar</button>
                 </div>
             </div>
-            
+            <div class="row">
+                <div class="col-md-offset-4 col-md-2">
+                    <button type="button" ng-click="openmodal()" class="btn btn-primary">ok</button>
+                </div>
+            </div>
         </form>
         <table class="table table-striped table-dark">
             <thead class="thead-dark">
@@ -57,12 +82,12 @@
                 <th>Genero</th>
             </thead>
             <tr ng-repeat="row in registros| orderBy:'nombre'">
-                <td>{{row.nombre}}</td>
+                <td>{{row.Nombre}}</td>
                 <td>{{row.Apellidos}}</td>
-                <td>{{row.Correo}}</td>
-                <td>{{row.Fecha_n}}</td>
                 <td>{{row.genero}}</td>
-                <td><button ng-click="borrar(row.id)">borrar{{$index}}</button></td>
+                <td>{{row.Fecha_n}}</td>
+                <td>{{row.Correo}}</td>
+                <td><button ng-click="borrar(row.id)">borrar</button></td>
                 <td><button ng-click="editar(row.id)">editar</button></td>
 
             </tr>
