--- a/2/index.html
+++ b/2/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html ng-app="appcontroller">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,86 +14,107 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"></script>
     <script src="libs/controller.js"></script>
 </head>
+
 <body ng-controller="controlador">
-    <!--inico-->
-    <div>
-<!--agregar usuario-->
-<div class="pos-f-t">
-        <div class="collapse" id="navbarToggleExternalContent">
-          <div class="bg-dark p-4">
-            <h5 class="text-white h4">Collapsed content</h5>
-            <span class="text-muted">Toggleable via the navbar brand.</span>
-          </div>
-        </div>
-        <nav class="navbar navbar-dark bg-dark">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </nav>
-      </div>
-<!--ver lista-->
-<div>
 
-</div>
-    </div>
     <div class="container">
-        <form >
-            <div class="input-group col-md-6">
-                <div class="input-group-prepend">
-                    <span class="input-group-text " id="">Nombre</span>
+        <div class="row justify-content-md-center" ng-hide="mostrar!=0">
+            <div class="card col-md-3 border" style="width: 18rem;" ng-click="accion(1)">
+                <img src="img/agregar.png" alt="agregar" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Agregar Registro</h5>
                 </div>
-                <input type="text" class="form-control" ng-model="nuevo.nombre">
-            </div>
-            <div class="input-group col-md-6">
-                <div class="input-group-prepend">
-                    <span class="input-group-text " id="">Apellidos</span>
-                </div>
-                <input type="text" class="form-control" ng-model="nuevo.Apellidos">
-            </div>
-            <div class="col-md-6">
-                <label>Genero:</label>
-                <input type="radio" name="genero" ng-model="nuevo.genero" value="Masculino"/>
-                <input type="radio" name="genero" ng-model="nuevo.genero" value="Femenino"/>
             </div>
 
-            <div class="col-md-6">
-                <label>Fecha de Nacimiento:</label>
-                <input type="date" ng-model="nuevo.Fecha_n"></textarea>
-            </div>
-            <div class="col-md-6">
-                <label>Correo:</label><input type="email" ng-model="nuevo.Correo">
-            </div>
-            <div class="row">
-                <div class="col-md-offset-4 col-md-2">
-                    <button type="button" ng-click="guardar()" class="btn btn-primary">Guardar</button>
+            <div class="card col-md-3 border" style="width: 18rem;" ng-click="accion(2)">
+                <img src="img/lista.png" alt="agregar" class="card-img-top">
+                <div class="card-body">
+                    <h5 class="card-title">Ver Registros</h5>
                 </div>
             </div>
+        </div>
+
+        <form ng-show="mostrar==1 || mostrar==3" class="row justify-content-md-center">
+            <div class="form-group">
+                <label class="alert alert-primary col-md-12">{{mensaje}}</label></br>
+                <div class="row">
+                    <div class="input-group col-md-6">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text " id="">Nombre</span>
+                        </div>
+                        <input type="text" class="form-control" ng-model="nuevo.Nombre">
+                    </div>
+
+                    <div class="input-group col-md-6">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text " id="">Apellidos:</span>
+                        </div>
+                        <input type="text" class="form-control" ng-model="nuevo.Apellidos">
+                    </div>
+                    <div class="input-group col-md-6">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text " id="">Genero:</span>
+                        </div>
+                        <input type="radio" class="form-control" name="genero" ng-model="nuevo.genero" value="Masculino" />Masculino
+                        <input type="radio" class="form-control" name="genero" ng-model="nuevo.genero" value="Femenino" />Femenino
+                    </div>
+
+                    <div class="input-group col-md-6">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text " id="">Correo:</span>
+                        </div>
+                        <input type="email" class="form-control" ng-model="nuevo.Correo">
+                    </div>
+
+                    <div class="input-group col-md-6">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text " id="">Fecha de Nacimiento:</span>
+                        </div>
+                        <input type="date" class="form-control" ng-model="nuevo.Fecha_n">
+                    </div>
+                </div>
+
+            </div>
+
+
             <div class="row">
-                <div class="col-md-offset-4 col-md-2">
-                    <button type="button" ng-click="openmodal()" class="btn btn-primary">ok</button>
+                <div class="col-md-5" ng-show="mostrar==1">
+                    <button type="button"  ng-click="guardar()" class="btn btn-primary">Guardar</button>
+                </div>
+                <div class="col-md-5" ng-show="mostrar==3">
+                        <button type="button"  ng-click="actualizar()" class="btn btn-primary">Actualizar</button>
+                    </div>
+                <div class="col-md-5">
+                    <button type="button" ng-click="cancelar()" class="btn btn-primary">Cancelar</button>
                 </div>
             </div>
         </form>
-        <table class="table table-striped table-dark">
-            <thead class="thead-dark">
-                <th>Nombre</th>
-                <th>apellidos</th>
-                <th>Correo</th>
-                <th>fecha_nacimiento</th>
-                <th>Genero</th>
-            </thead>
-            <tr ng-repeat="row in registros| orderBy:'nombre'">
-                <td>{{row.Nombre}}</td>
-                <td>{{row.Apellidos}}</td>
-                <td>{{row.genero}}</td>
-                <td>{{row.Fecha_n}}</td>
-                <td>{{row.Correo}}</td>
-                <td><button ng-click="borrar(row.id)">borrar</button></td>
-                <td><button ng-click="editar(row.id)">editar</button></td>
 
-            </tr>
-        </table>
+        <div ng-show="mostrar==2">
+            <table class="table table-striped table-dark">
+                <thead class="thead-dark">
+                    <th>Nombre</th>
+                    <th>apellidos</th>
+                    <th>Genero</th>
+                    <th>fecha_nacimiento</th>
+                    <th>Correo</th>
+                    <th><button type="button" ng-click="cancelar()" class="btn btn-primary">Regresar</button></th>
+                </thead>
+                <tr ng-repeat="row in registros| orderBy:'Nombre'">
+                    <td>{{row.Nombre}}</td>
+                    <td>{{row.Apellidos}}</td>
+                    <td>{{row.genero}}</td>
+                    <td>{{row.Fecha_n}}</td>
+                    <td>{{row.Correo}}</td>
+                    <td><button class="btn btn-info" ng-click="borrar(row.id)">borrar</button></td>
+                    <td><button class="btn btn-info" ng-click="editar(row.id,row.Nombre,row.Apellidos,row.genero,row.Fecha_n,row.Correo)">editar</button></td>
+
+                </tr>
+            </table>
+        </div>
+
 
     </div>
 </body>
+
 </html>
